# verify

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  opencode.template.json  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  sync-wiki.yml
src/rvrb_verify/: __init__.py  _default_provider.py  cli.py  engine.py  mcp.py  models.py  provider.py  tools.py
src/rvrb_verify/strategies/: __init__.py  base.py  fact_check.py  legal.py  research.py
tests/: conftest.py  test_cli.py  test_mcp.py  test_models.py  test_provider.py  test_strategies.py  test_tools.py  test_verify_engine.py
